<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">数字密码解锁</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- 描述数字键盘按下 -->
    <string name="numeric_keyboard_down">numeric keyboard down</string>
	<!-- 描述数字键盘弹起 -->
	<string name="numeric_keyboard_up">numeric keyboard up</string>
	<!-- 描述数字键盘取消 -->
	<string name="numeric_keyboard_cancel">numeric keyboard cancel</string>
    
	<string name="please_input_pwd">请输入密码</string>
	<string name="please_input_pwd_again">确认密码</string>
	<string name="not_equals">两次输入的密码不一致,请重新输入！</string>
	<string name="setting_pwd_success">密码设置成功！</string>
	<string name="login_success">登录成功！</string>
	<string name="input_again">重输</string>
	<string name="delete">删除</string>
	<string name="test1">数字键盘1</string>
	<string name="test2">数字键盘2</string>
	<string name="test3">数字键盘3</string>
	<string name="dialog_title">提示</string>
	<string name="dialog_msg">请选择类型：</string>
	<string name="dialog_ok">设置密码</string>
	<string name="dialog_cancel">登录</string>
	
	<!-- 数字按键 -->
	<string name="zero">0</string>
	<string name="one">1</string>
	<string name="two">2</string>
	<string name="three">3</string>
	<string name="four">4</string>
	<string name="five">5</string>
	<string name="six">6</string>
	<string name="seven">7</string>
	<string name="eight">8</string>
	<string name="neigh">9</string>
</resources>
